# gt-practicum-public

./: arima.py  k-means.py  pyproject.toml  utils.py
data/: sample.csv
