[tool.poetry]
name = "gt-practicum"
version = "0.1.0"
description = ""
authors = ["Yutaro Watanabe <ywatanabe31@gatech.edu>"]
readme = "README.md"
packages = [{include = "gt_practicum"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
black = "^23.3.0"
scikit-learn = "^1.2.2"
statsmodels = "^0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
